# libg15

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  configure.in  libg15.c  libg15.h  libg15.pc.in
doc/: Makefile.am  NEWS.old
src/: Makefile.am  libg15.c
tools/: Makefile  vim.project
