AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=libg15.pc


doc_DATA =	ChangeLog.old \
			NEWS.old \
			ChangeLog \
			README.md \
			NEWS \
			AUTHORS \
			INSTALL \
			COPYING

EXTRA_DIST =	ChangeLog.old \
				NEWS.old \
				README.md
